# HNScrawler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: provider_rules.json
docs/: ARCHITECTURE.md  CLOUD_AUDIT.md  DANE_SITE.md  DATA_MODEL.md  DEPLOYMENT.md  FAILURE_TAXONOMY.md  HOST_DIRECTORY.md  INDEXING_AUDIT.md  LIVE_DIRECTORY.md  PERFORMANCE.md  PRODUCTION_RELEASE.md  SOURCE_AUDIT.md
scripts/: archive-release.sh  check-hsd-ready.sh  configure-live-directory-nginx.sh  env.example  export-hsd-jsonl.sh  export-hsd-nameonly-jsonl.sh  full-nightly-job.sh  gcloud-attach-production-disk.sh  gcloud-create-indexer.sh  gcloud-delete-indexer-vm.sh  gcloud-deploy-live-directory.sh  gcloud-indexer-pipeline-status.sh  gcloud-prepare-production-web.sh  gcloud-print-site-tlsa.sh  gcloud-production-cycle.sh  gcloud-production-preflight.sh  gcloud-run-indexer-pipeline.sh  gcloud-ssh-lib.sh  gcloud-stop-indexer.sh  gcloud-sync-hsd-until-ready.sh  gcloud-sync-hsd-window.sh  gcloud-sync-indexer-code.sh  gcloud-wait-indexer-ssh.sh  generate-site.sh  hsd-export-names-jsonl.js  hsd-nameonly-replay-jsonl.js  indexer-status.sh  publish-hns-topology-navigation.sh  publish-indexer-site.sh  publish-site.sh  run-bootstrap.sh  run-incremental.sh  run-indexer-pipeline-local.sh  run-live-checks.sh  run-live-delegation-index.sh  run-live-directory.sh  run-production-cycle-logged.sh  setup-hsd-service.sh  setup-indexer-disk.sh  setup-indexer.sh  (+3 more)
tests/: test_archiver.py  test_browser_evidence.py  test_browser_summary.py  test_browser_targets.py  test_classifier.py  test_cli.py  (+19 more)
(+49 files in other folders)
